# nftscan

./: .gitignore  LICENSE  README.md  docker-compose.yml  downloader.py  main.py  php_scan.py  pyproject.toml  quick_scan_php_js.py  setup.py
images/: ...  .test.php.jpg.txt.swp  test.php.jpg.txt
jsteg/: Dockerfile
jsteg/app_files/: routes.py
nftscan/: Dockerfile  __init__.py  __main__.py  docker-compose.yml  downloader.py  scan.py
nftscan/app_files/: config.txt  routes.py  scan.py  services_config.py
nftscan/data/: info.txt  page.html  test.php.jpg.out
quickscan/: Dockerfile
quickscan/app_files/: __init__.py  routes.py
steghide/: Dockerfile
stegseek/: Dockerfile
stegseek/app_files/: routes.py
tests/: test_scan.py
